sites/all/themes/bartik/css/layout.css
/* ... */
.tabs .tabs.primary::after{
    content: "";
    display: table;
    clear: both;
}
.tabs .tabs.primary li{
    float: left;
}
.tabs .tabs.primary li a{
    line-height: 36px;
    display: inline-block;
    padding: 0 20px;
    -webkit-border-radius: 3px 3px 0 0;
    border-radius: 3px 3px 0 0;
    background-color: transparent;
    font-weight: bold;
    font-size: 16px;
}
.tabs .tabs.primary li.active a{
    background-color: #01a050;
    color:#fff;
    border-color: #01a050;
}

.page-user .region-content form{
    margin-left: 15px;
    margin-top: 45px;
    max-width: 768px;
    min-height: 260px;
}
.page-user .region-content form input[type="text"], .page-user .region-content form input[type="password"]{
    border:1px solid #bbb;
    padding: 8px 5px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    width: 100%;
    max-width: 320px;
    margin-bottom: 10px;
}
.page-user .region-content form label{
    margin-bottom: 3px;
    height: auto;
    position: static !important;
}
.page-user .region-content form input[type="submit"]{
    min-width: 140px;
    text-align: center;
    padding: 8px 20px;
    background: #01a050;
    color:#fff;
    font-size: 16px;
    font-weight: bold;
    border:none;
    cursor:pointer;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    margin-top: 25px;
    -webkit-transition:all ease 0.3s;
    transition:all ease 0.3s;
}
.page-user .region-content form input[type="submit"]:hover{
    background: #03ab56;
}

.page-user .form-item .description{
    font-size: 13px;
}
/*===== e: login =====*/





/*===== responsive =====*/

/* md */
@media screen and (min-width: 992px) and (max-width: 1240px) {
    #page-wrapper, .pane-view-home h2, .pane-view-home .pane-content{
        width: 980px;
    }

    .pane-slideshow-home .views-slideshow-controls-top .views-slideshow-controls-text{
        width: 950px;
    }
    #header .region-header #block-views-exp-view-search-page{
        width: 324px;
        margin-right: 0;
    }
    #header .region-header #block-views-exp-view-search-page input[type="text"]{
        width: 100px;
    }
    #header .tb-megamenu .nav > li > a{
        margin-left: 18px;
    }

    .pane-view-home .views-field-field-image a{
        height: 205px;
    }
    .pane-view-home .views-row img{
        height: auto;
        max-height: 205px;
    }
}
/* e: md */


/* sm */
@media screen and (min-width: 768px) and (max-width: 991px) {
    #page-wrapper, .pane-view-home h2, .pane-view-home .pane-content{
        width: 768px;
    }

    .pane-slideshow-home .views-slideshow-controls-top .views-slideshow-controls-text{
        width: 738px;
    }
    .pane-view-home .views-slideshow-controls-top a{
        top:-45px
    }

    .pane-view-home .views-field-field-image a{
        height: 158px;
    }
    .pane-view-home .views-row img{
        height: auto;
        max-height: 158px;
    }

    .pane-slideshow-home .views-slideshow-cycle-main-frame{
        height: 350px !important;
    }
    .pane-slideshow-home .views_slideshow_cycle_main img{
        max-height: 350px;
    }
}
/* e: sm */


/* xs */
@media screen and (max-width: 767px) {
    #page-wrapper, .pane-slideshow-home .views-slideshow-controls-top .views-slideshow-controls-text, .pane-view-home h2, .pane-view-home .pane-content{
        width: 100%;
    }

    #header .region-header #block-views-exp-view-search-page{
        display: none;
    }
    .pane-view-home .views-slideshow-controls-top{
        /*top:-45px*/
        display: none;
    }
    .pane-slideshow-home .views-slideshow-cycle-main-frame{
        height: 300px !important;
    }
    .pane-slideshow-home .views_slideshow_cycle_main img{
        max-height: 300px;
    }

    #views_slideshow_cycle_teaser_section_view_home-default, #views_slideshow_cycle_teaser_section_view_home-default_2, #views_slideshow_cycle_teaser_section_view_home-default_3{
        height: auto !important;
    }
    .pane-view-home .views-slideshow-cycle-main-frame-row{
        position: static !important;
        margin-top: 30px;
    }

    .pane-view-home .views-slideshow-cycle-main-frame-row .views-row:nth-child(3n+4){
        clear: none;
    }

    .pane-view-home .views-slideshow-cycle-main-frame-row .views-row:nth-child(2n+3){
        clear: left;
    }
    .pane-view-home .views-row{
        width: 50%;
    }
    .pane-view-home .views-row img{
        height: auto;
    }
    .pane-view-home h2 a, .panel-2col-stacked .panel-col-first .view-header h2 a{
        width: auto;
        padding: 0 15px;
    }

    #footer-wrapper .footer_1{
        float: none;
        text-align: center;
        margin-bottom: 10px;
    }
    #footer-wrapper .footer_2{
        float: none;
        text-align: center;
    }

    .panel-2col-stacked .panel-col-first{
        margin-bottom: 30px;
        width: 100%;
    }
    .panel-2col-stacked .panel-col-last{
        width: 100%;
    }
}
/* ... */

